--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fontsource/inter": "^5.0.15",
     "@mui/icons-material": "^5.14.18",
     "@mui/joy": "^5.0.0-beta.15",
+    "@react-pdf/renderer": "^3.4.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -20,6 +21,7 @@
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
+    "use-local-storage-state": "^19.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
