--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/ibm-plex-sans": "^5.0.20",
+    "@fontsource/ibm-plex-serif": "^5.0.13",
     "@mui/icons-material": "^5.14.18",
     "@mui/joy": "^5.0.0-beta.15",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
